everythinng added and working

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Eliza Irwin</h1>
+											<h1>Hi there, I’m Eliza Irwin</h1>
 											<p>A full-stack web developer</p>
 										</header>
 										<p>I landed in the web development world after working four years as an e-commerce buyer. I've turned my problem solving and creative skills into a career that jives with my personality. Let's connect!</p>
 									</div>
-									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+									<span class="image object" id="eliza">
+										<img src="images/eliza.jpg" alt="" />
 									</span>
 								</section>
 
@@ -107,7 +107,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/BeGin.png" alt="" /></a>
 											<h3>Let The Evening BeGin</h3>
 											<p>A responsive app that uses HTML5, Bootstrap, CSS, Javascript, JQuery, and APIs. APIs include Open Weather Map and Cocktail DB.</p>
 											<p>The user enters his or her city and is recommended drinks based on the weather of that city. The app comes complete with instructions and ingredients for the cocktail chosen by the user from the recommended list.</p>
@@ -118,49 +118,58 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/giphy.png" alt="" /></a>
 											<h3>GifTastic</h3>
 											<p>An app that uses HTML5, Bootstrap, CSS, Javascript, and JQuery.</p>
 											<p>The user enters a Gif search and the page populates with 10 items related to the search.</p>
 											<p>Code is included to stop/start the Gifs.</p>
 											<ul class="actions">
-													<li><a href="https://elizairwin.github.io/GifTastic/" class="button">See the Project</a></li>
-													<li><a href="https://github.com/elizairwin/GifTastic" class="button">See the Code</a></li>
+												<li><a href="https://elizairwin.github.io/GifTastic/" class="button">See the Project</a></li>
+												<li><a href="https://github.com/elizairwin/GifTastic" class="button">See the Code</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/trivia.png" alt="" /></a>
 											<h3>The Fantastic Food Trivia Game</h3>
 											<p>A responsive game that uses HTML5, CSS, JavaScript, and JQuery, and Timers.</p>
 											<p>The user begins the game and has 30 seconds to answer each question.</p>
 											<p>At the end, a scoreboard is returned for the user.</p>
 											<ul class="actions">
-													<li><a href="https://elizairwin.github.io/TriviaGame/" class="button">See the Project</a></li>
-													<li><a href="https://github.com/elizairwin/TriviaGame" class="button">See the Code</a></li>
+												<li><a href="https://elizairwin.github.io/TriviaGame/" class="button">See the Project</a></li>
+												<li><a href="https://github.com/elizairwin/TriviaGame" class="button">See the Code</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/crystal.png" alt="" /></a>
+											<h3>Crystal Collector Game</h3>
+											<p>A fun and interacting game that uses HTML5, CSS, Bootstrap, JavaScript, and JQuery.</p>
+											<p>The user clicks on the crystals (which are all assigned different point values) and tries to match the target score.</p>
+											<p>Alerts are displayed for wins/losses and the game is reset at the end of a session.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://elizairwin.github.io/Crystal-Game/" class="button">See the Project</a></li>
+												<li><a href="https://github.com/elizairwin/Crystal-Game" class="button">See the Code</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/dressup.png" alt="" /></a>
+											<h3>Dress Up Game</h3>
+											<p>A simple game that uses HTML5, CSS, Bootstrap, JavaScript, and JQuery.</p>
+											<p>The user clicks the clothing buttons to dress the character in an outfit.</p>
+											<p>The 'icebox' includes more outfit/accessory choices for the user to pick from.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://elizairwin.github.io/unit-4-game/" class="button">See the Project</a></li>
+												<li><a href="https://github.com/elizairwin/unit-4-game" class="button">See the Code</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/psychic.png" alt="" /></a>
+											<h3>Psychic Game</h3>
+											<p>A very simple game that HTML5, CSS, Bootstrap, and JavaScript.</p>
+											<p>The user types a letter guess and attempts to match the letter the computer is thinking of.</p>											</p>
+											<p>Alerts are displayed for wins/losses and the game is reset at the end of a session.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://elizairwin.github.io/Psychic-Game/" class="button">See the Project</a></li>
+												<li><a href="https://github.com/elizairwin/Psychic-Game" class="button">See the Code</a></li>
 											</ul>
 										</article>
 									</div>
@@ -222,22 +231,22 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/resume.png" alt="" /></a>
 											<ul class="actions">
-													<li><a href="#" class="button">View Resume</a></li>
+													<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview" width="640" height="480"" class="button">View Resume</a></li>
 												</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview" width="640" height="480" class="image"><img src="images/CV.png" alt="" /></a>
 										</article>
 									<ul class="actions">
 											<li><a href="#" class="button">View Cover Letter</a></li>
 										</ul>
 								<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/references.png" alt="" /></a>
 										</article>
 									<ul class="actions">
-											<li><a href="#" class="button">View References</a></li>
+											<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview" width="640" height="480" width="640" height="480" class="button">View References</a></li>
 										</ul>
 									</div>
 								</section>
