fixed the cover letter link

--- a/index.html
+++ b/index.html
@@ -233,21 +233,21 @@
 										<article>
 											<a href="#" class="image"><img src="images/resume.png" alt="" /></a>
 											<ul class="actions">
-													<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview" width="640" height="480"" class="button">View Resume</a></li>
+													<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview" width="640" height="480" class="button">View Resume</a></li>
 												</ul>
 										</article>
 										<article>
-											<a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview" width="640" height="480" class="image"><img src="images/CV.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/CV.png" alt="" /></a>
+											<ul class="actions">
+												<li><a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview" width="640" height="480" width="640" height="480" width="640" height="480" class="button">View Cover Letter</a></li>
+											</ul>
 										</article>
-									<ul class="actions">
-											<li><a href="#" class="button">View Cover Letter</a></li>
-										</ul>
-								<article>
+										<article>
 											<a href="#" class="image"><img src="images/references.png" alt="" /></a>
+											<ul class="actions">
+												<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview" width="640" height="480" width="640" height="480" class="button">View References</a></li>
+											</ul>
 										</article>
-									<ul class="actions">
-											<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview" width="640" height="480" width="640" height="480" class="button">View References</a></li>
-										</ul>
 									</div>
 								</section>
 
