--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									class="label">Instagram</span></a></li>
 						<li><a href="https://www.linkedin.com/in/elizairwin/" class="icon brands fa-linkedin"><span
 									class="label">Medium</span></a></li>
-						<li><a href="https://github.com/elizairwin" class="icon brands fa-github"><span
+						<li><a href="https://www.linkedin.com/in/elizairwin/" class="icon brands fa-github"><span
 									class="label">Medium</span></a></li>
 					</ul>
 				</header>
@@ -43,19 +43,45 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Hi there, I’m Eliza Irwin</h1>
+							<h1>Hi there, <br> I’m Eliza Irwin</h1>
 							<p>A full-stack web developer</p>
 						</header>
 						<p>I landed in the web development world after working four years as an e-commerce buyer. I've
 							turned my problem solving and creative skills into a career that jibes with my personality.
 							Let's connect!</p>
+
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a
+									href="mailto:elizairwin@gmail.com">elizairwin.gmail.com</a></li>
+							<li class="icon solid fa-phone">(614) 257-7877</li>
+						</ul>
+
+						<article>
+							<ul class="actions">
+								<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview"
+										class="button">View Resume</a></li>
+							</ul>
+						</article>
+						<article>
+							<article>
+								<ul class="actions">
+									<li><a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview"
+											class="button">View Cover Letter</a></li>
+								</ul>
+								<article>
+									<ul class="actions">
+										<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview"
+												class="button">View References</a></li>
+									</ul>
+								</article>
 					</div>
 					<span class="image object" id="eliza">
 						<img src="images/eliza.jpg" alt="" />
 					</span>
+
+
 				</section>
 
-				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Skills</h2>
@@ -209,106 +235,16 @@
 			</div>
 		</div>
 
-		<!-- Sidebar -->
-		<div id="sidebar">
-			<div class="inner">
 
-				<!-- Don't need this part for now -->
-				<!-- Search
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section> -->
 
-				<!-- Menu
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
-									</ul>
-								</nav> -->
-
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2 id="resume">Professional Materials</h2>
-					</header>
-					<div class="mini-posts">
-						<article>
-							<a href="#" class="image"><img src="images/resume.png" alt="" /></a>
-							<ul class="actions">
-								<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview"
-										width="640" height="480" class="button">View Resume</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/CV.png" alt="" /></a>
-							<ul class="actions">
-								<li><a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview"
-										width="640" height="480" width="640" height="480" width="640" height="480"
-										class="button">View Cover Letter</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/references.png" alt="" /></a>
-							<ul class="actions">
-								<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview"
-										width="640" height="480" width="640" height="480" class="button">View
-										References</a></li>
-							</ul>
-						</article>
-					</div>
-				</section>
-
-				<!-- Section -->
-				<section>
-					<header class="major" id="email">
-						<h2>Get In Touch</h2>
-					</header>
-					<ul class="contact">
-						<li class="icon solid fa-envelope"><a
-								href="mailto:elizairwin@gmail.com">elizairwin.gmail.com</a></li>
-						<li class="icon solid fa-phone">(614) 257-7877</li>
-						<li class="icon solid fa-home">7 Loring Street, Apt 2<br />Boston MA 02127</li>
-					</ul>
-				</section>
-
-				<!-- Footer -->
-				<footer id="footer">
+		<!-- Footer -->
+		<!-- <footer id="footer">
 					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a
 							href="https://html5up.net">HTML5 UP</a>.</p>
-				</footer>
+				</footer> -->
 
-			</div>
-		</div>
+	</div>
+	</div>
 
 	</div>
 
