--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 									class="label">Instagram</span></a></li>
 						<li><a href="https://www.linkedin.com/in/elizairwin/" class="icon brands fa-linkedin"><span
 									class="label">Medium</span></a></li>
-						<li><a href="https://www.linkedin.com/in/elizairwin/" class="icon brands fa-github"><span
+						<li><a href="https://github.com/elizairwin" class="icon brands fa-github"><span
 									class="label">Medium</span></a></li>
 					</ul>
 				</header>
@@ -234,8 +234,6 @@
 
 			</div>
 		</div>
-
-
 
 		<!-- Footer -->
 		<!-- <footer id="footer">
