added LiriBot to projects

--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
 					</header>
 					<div class="posts">
 						<article>
+							<a href="#" class="image"><img src="images/LiriBot.png" alt="" /></a>
+							<h3>Liri-Bot</h3>
+							<p>Liri is like the iPhone's Siri. It is a language interpreter that takes in text and returns data 
+								for the user. Here, we use the command line to ask Siri about songs and/or movies.</p>
+							<p>In the command line, the user enters spotify-this-song 'song name', movie-this 'movie-name',
+								or do-what-it-says (this will pull from random.txt). The user is returned song or movie data. </p>
+							<p>I worked on this app from beginning to end, installing necessary packages including axios, 
+								writing the code, performing testing, debugging, and then finally I deployed the app.
+							</p>
+							<ul class="actions">
+								<li><a href="https://github.com/elizairwin/liri-node-app" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
 							<a href="#" class="image"><img src="images/BeGin.png" alt="" /></a>
 							<h3>Let The Evening BeGin</h3>
 							<p>A responsive app that uses HTML5, Bootstrap, CSS, Javascript, JQuery, and APIs. APIs
