--- a/index.html
+++ b/index.html
@@ -144,6 +144,20 @@
 					</header>
 					<div class="posts">
 						<article>
+							<a href="#" class="image"><img src="images/Bamazon.png" alt="" /></a>
+							<h3>Bamazon</h3>
+							<p>This is an Amazon-like storefront that simulates a simple retail site. Using SQL, 
+								Bamazon stores product information. Using Node.js packages, Bamazon interacts with the user.</p>
+							<p>In the console, a user can select to perform customer or manager tasks. </p>
+							<p>In bamazonCustomer.js, Bamazon displays inventory, takes in orders, and depletes stock as necessary.
+								In bamazonManager.js, Bamazon allows the user to perform higher level tasks such as checking inventory or adding product to site.
+							</p>
+							<ul class="actions">
+								<li><a href="https://github.com/elizairwin/bamazon" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
 							<a href="#" class="image"><img src="images/LiriBot.png" alt="" /></a>
 							<h3>Liri-Bot</h3>
 							<p>Liri is like the iPhone's Siri. It is a language interpreter that takes in text and returns data 
