--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
 
 						<article>
 							<ul class="actions">
-								<li><a href="https://drive.google.com/file/d/1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p/preview"
+								<li><a href="https://drive.google.com/open?id=1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p"
 										class="button">View Resume</a></li>
 							</ul>
 						</article>
 						<article>
 							<article>
 								<ul class="actions">
-									<li><a href="https://drive.google.com/file/d/14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4/preview"
+									<li><a href="https://drive.google.com/open?id=14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4"
 											class="button">View Cover Letter</a></li>
 								</ul>
 								<article>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/file/d/1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n/preview"
+										<li><a href="https://drive.google.com/open?id=1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n"
 												class="button">View References</a></li>
 									</ul>
 								</article>
