--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 					<div class="content">
 						<header>
 							<h1>Hi there, <br> I’m Eliza Irwin</h1>
-							<p>A full-stack web developer</p>
+							<p>Full-stack web developer</p>
 						</header>
-						<p>I landed in the web development world after working four years as an e-commerce buyer. I've
-							turned my problem solving and creative skills into a career that jibes with my personality.
-							Let's connect!</p>
+						<p>A results-driven e-commerce buyer turned full-stack developer with strong
+							problem-solving abilities. Well versed in completing high-intensity, high-volume
+							work. Passionate about design and tech. Interested in a challenging career track
+							in the web development space.</p>
 
 						<ul class="contact">
 							<li class="icon solid fa-envelope"><a
@@ -133,7 +134,42 @@
 								<p>Server-side JavaScript framework.</p>
 							</div>
 						</article>
-
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>MySQL</h3>
+								<p>Relational database management system..</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-js"></i>
+							</span>
+							<div class="content">
+								<h3>Express.js</h3>
+								<p>Application framework for Node.js.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-js"></i>
+							</span>
+							<div class="content">
+								<h3>Handlebars.js</h3>
+								<p>A templating engine used to separate HTML and JS.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>Sequelize</h3>
+								<p>A promise-based Node.js ORM.</p>
+							</div>
+						</article>
 					</div>
 				</section>
 
