--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							</span>
 							<div class="content">
 								<h3>HTML5</h3>
-								<p>The standard programming language for describing the contents and appearance of Web
+								<p>The standard programming language for describing the contents and appearance of web
 									pages.</p>
 							</div>
 						</article>
@@ -131,7 +131,7 @@
 							</span>
 							<div class="content">
 								<h3>Node.js</h3>
-								<p>Server-side JavaScript framework.</p>
+								<p>A server-side JavaScript framework.</p>
 							</div>
 						</article>
 						<article>
@@ -140,7 +140,7 @@
 							</span>
 							<div class="content">
 								<h3>MySQL</h3>
-								<p>Relational database management system..</p>
+								<p>A relational database management system..</p>
 							</div>
 						</article>
 						<article>
@@ -149,7 +149,7 @@
 							</span>
 							<div class="content">
 								<h3>Express.js</h3>
-								<p>Application framework for Node.js.</p>
+								<p>An application framework for Node.js.</p>
 							</div>
 						</article>
 						<article>
@@ -170,6 +170,15 @@
 								<p>A promise-based Node.js ORM.</p>
 							</div>
 						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>MongoDB</h3>
+								<p>A document-oriented NoSQL database.</p>
+							</div>
+						</article>
 					</div>
 				</section>
 
@@ -180,13 +189,42 @@
 					</header>
 					<div class="posts">
 						<article>
+							<a href="#" class="image"><img src="images/nfl.png" alt="" /></a>
+							<h3>NFL Gear Zone</h3>
+							<p>This is a full-stack MCV app that allows users to subscribe to receive hats monthly for their favorite NFL team.</p>
+							<p>The models consist of three associated tables - person, hats, and teams.</p>
+							<p>The brand new package used here is Moment which allows us to easily handle dates/times.</p>
+							<ul class="actions">
+								<li><a href="https://nflgearzone.herokuapp.com" class="button">See
+										the Project</a></li>
+								<li><a href="https://github.com/NayCS/NFLGearZone" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/friend.png" alt="" /></a>
+							<h3>Friend Finder</h3>
+							<p>This is a compatability-based friend finding application - similar to a dating app.</p>
+							<p>It is a full-stack site that takes in user survey results, compares answers with other
+								users, and provides a name of a friend match.</p>
+							<ul class="actions">
+								<li><a href="https://secure-dawn-46163.herokuapp.com" class="button">See
+										the Project</a></li>
+								<li><a href="https://github.com/elizairwin/FriendFinder" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
 							<a href="#" class="image"><img src="images/Bamazon.png" alt="" /></a>
 							<h3>Bamazon</h3>
-							<p>This is an Amazon-like storefront that simulates a simple retail site. Using SQL, 
-								Bamazon stores product information. Using Node.js packages, Bamazon interacts with the user.</p>
+							<p>This is an Amazon-like storefront that simulates a simple retail site. Using SQL,
+								Bamazon stores product information. Using Node.js packages, Bamazon interacts with the
+								user.</p>
 							<p>In the console, a user can select to perform customer or manager tasks. </p>
-							<p>In bamazonCustomer.js, Bamazon displays inventory, takes in orders, and depletes stock as necessary.
-								In bamazonManager.js, Bamazon allows the user to perform higher level tasks such as checking inventory or adding product to site.
+							<p>In bamazonCustomer.js, Bamazon displays inventory, takes in orders, and depletes stock as
+								necessary.
+								In bamazonManager.js, Bamazon allows the user to perform higher level tasks such as
+								checking inventory or adding product to site.
 							</p>
 							<ul class="actions">
 								<li><a href="https://github.com/elizairwin/bamazon" class="button">See the
@@ -196,11 +234,15 @@
 						<article>
 							<a href="#" class="image"><img src="images/LiriBot.png" alt="" /></a>
 							<h3>Liri-Bot</h3>
-							<p>Liri is like the iPhone's Siri. It is a language interpreter that takes in text and returns data 
+							<p>Liri is like the iPhone's Siri. It is a language interpreter that takes in text and
+								returns data
 								for the user. Here, we use the command line to ask Siri about songs and/or movies.</p>
-							<p>In the command line, the user enters spotify-this-song 'song name', movie-this 'movie-name',
-								or do-what-it-says (this will pull from random.txt). The user is returned song or movie data. </p>
-							<p>I worked on this app from beginning to end, installing necessary packages including axios, 
+							<p>In the command line, the user enters spotify-this-song 'song name', movie-this
+								'movie-name',
+								or do-what-it-says (this will pull from random.txt). The user is returned song or movie
+								data. </p>
+							<p>I worked on this app from beginning to end, installing necessary packages including
+								axios,
 								writing the code, performing testing, debugging, and then finally I deployed the app.
 							</p>
 							<ul class="actions">
