--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 						<article>
 							<ul class="actions">
-								<li><a href="https://drive.google.com/open?id=1OG3UMYMxwTsHh5Dp_zbIfNxoHJzIko7p"
+								<li><a href="https://drive.google.com/open?id=1AYUNLsy54xjoV6MfMt0V3PN-KpifsT54"
 										class="button">View Resume</a></li>
 							</ul>
 						</article>
@@ -77,117 +77,39 @@
 								</article>
 					</div>
 					<span class="image object" id="eliza">
-						<img src="images/eliza.jpg" alt="" />
+						<img src="images/eliza.jpg" alt="Eliza" />
 					</span>
 
 
 				</section>
-
-				<section>
-					<header class="major">
-						<h2>Skills</h2>
-					</header>
-					<div class="features">
-						<article>
-							<span class="icon">
-								<i class="fab fa-html5"></i>
-							</span>
-							<div class="content">
-								<h3>HTML5</h3>
-								<p>The standard programming language for describing the contents and appearance of web
-									pages.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-bootstrap"></i>
-							</span>
-							<div class="content">
-								<h3>Bootstrap</h3>
-								<p>A responsive, front-end component library.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-css3"></i>
-							</span>
-							<div class="content">
-								<h3>CSS3</h3>
-								<p>Describes how HTML elements should be styled and displayed.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-js-square"></i>
-							</span>
-							<div class="content">
-								<h3>JavaScript & JQuery</h3>
-								<p>The programming languages used to make web pages interactive.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-node-js"></i>
-							</span>
-							<div class="content">
-								<h3>Node.js</h3>
-								<p>A server-side JavaScript framework.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-cube"></i>
-							</span>
-							<div class="content">
-								<h3>MySQL</h3>
-								<p>A relational database management system..</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-js"></i>
-							</span>
-							<div class="content">
-								<h3>Express.js</h3>
-								<p>An application framework for Node.js.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-js"></i>
-							</span>
-							<div class="content">
-								<h3>Handlebars.js</h3>
-								<p>A templating engine used to separate HTML and JS.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-cube"></i>
-							</span>
-							<div class="content">
-								<h3>Sequelize</h3>
-								<p>A promise-based Node.js ORM.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon">
-								<i class="fab fa-cube"></i>
-							</span>
-							<div class="content">
-								<h3>MongoDB</h3>
-								<p>A document-oriented NoSQL database.</p>
-							</div>
-						</article>
-					</div>
-				</section>
-
-				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Projects</h2>
 					</header>
 					<div class="posts">
+						<article>
+							<a href="#" class="image"><img src="images/clicky.jpg.png" alt="" /></a>
+							<h3>Clicky Game</h3>
+							<p>This is a guessing game built with react.</p>
+							<p>This app uses all skills learned so far as a full-stack developer.</p>
+							<ul class="actions">
+								<li><a href="https://github.com/elizairwin/Click-Game" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/workout.jpg.png" alt="" /></a>
+							<h3>Workout Tracker</h3>
+							<p>This is a full-stack app that allows users to track and view their workouts.</p>
+							<p>The user is able to log runs and lifts.</p>
+							<p>I worked on this app from beginning to end, installing necessary packages including
+								axios,
+								writing the code, performing testing, debugging, and then finally I deployed the app.</p>
+							<ul class="actions">
+								<li><a href="https://github.com/elizairwin/WorkoutTracker" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
 						<article>
 							<a href="#" class="image"><img src="images/nfl.png" alt="" /></a>
 							<h3>NFL Gear Zone</h3>
@@ -335,6 +257,114 @@
 								<li><a href="https://github.com/elizairwin/Psychic-Game" class="button">See the Code</a>
 								</li>
 							</ul>
+						</article>
+					</div>
+				</section>
+
+				<section>
+					<header class="major">
+						<h2>Skills</h2>
+					</header>
+					<div class="features">
+						<article>
+							<span class="icon">
+								<i class="fab fa-html5"></i>
+							</span>
+							<div class="content">
+								<h3>HTML5</h3>
+								<p>The standard programming language for describing the contents and appearance of web
+									pages.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-bootstrap"></i>
+							</span>
+							<div class="content">
+								<h3>Bootstrap</h3>
+								<p>A responsive, front-end component library.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-css3"></i>
+							</span>
+							<div class="content">
+								<h3>CSS3</h3>
+								<p>Describes how HTML elements should be styled and displayed.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-js-square"></i>
+							</span>
+							<div class="content">
+								<h3>JavaScript & JQuery</h3>
+								<p>The programming languages used to make web pages interactive.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-node-js"></i>
+							</span>
+							<div class="content">
+								<h3>Node.js</h3>
+								<p>A server-side JavaScript framework.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>MySQL</h3>
+								<p>A relational database management system..</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-js"></i>
+							</span>
+							<div class="content">
+								<h3>Express.js</h3>
+								<p>An application framework for Node.js.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-js"></i>
+							</span>
+							<div class="content">
+								<h3>Handlebars.js</h3>
+								<p>A templating engine used to separate HTML and JS.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>Sequelize</h3>
+								<p>A promise-based Node.js ORM.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>MongoDB</h3>
+								<p>A document-oriented NoSQL database.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-react"></i>
+							</span>
+							<div class="content">
+								<h3>React</h3>
+								<p>React is a JavaScript library for building user interfaces.</p>
+							</div>
 						</article>
 					</div>
 				</section>
