--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 					</header>
 					<div class="posts">
 						<article>
+							<a href="#" class="image"><img src="images/restaurant.png" alt="" /></a>
+							<h3>Appetizer</h3>
+							<p>This is a full-stack MCV app that provides restaurant owners with an easy way to create a customized website and be online in minutes.</p>
+							<p>The models folder has the database tables, fields and definitions. This was done using Mongo DB</p>
+							<p>The brand new technology used here is Passport and JWT for user login.</p>
+							<ul class="actions">
+								<li><a href="https://obscure-shore-32335.herokuapp.com/" class="button">See
+										the Project</a></li>
+								<li><a href="https://github.com/elizairwin/Appetizer" class="button">See the
+										Code</a></li>
+							</ul>
+						</article>
+						<article>
 							<a href="#" class="image"><img src="images/clicky.jpg.png" alt="" /></a>
 							<h3>Clicky Game</h3>
 							<p>This is a guessing game built with react.</p>
