--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<a href="#" class="image"><img src="images/restaurant.png" alt="" /></a>
 							<h3>Appetizer</h3>
 							<p>This is a full-stack MCV app that provides restaurant owners with an easy way to create a customized website and be online in minutes.</p>
-							<p>The models folder has the database tables, fields and definitions. This was done using Mongo DB</p>
+							<p>The models folder has the database tables, fields and definitions. This was done using Mongo DB.</p>
 							<p>The brand new technology used here is Passport and JWT for user login.</p>
 							<ul class="actions">
 								<li><a href="https://obscure-shore-32335.herokuapp.com/" class="button">See
