--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 							<h1>Hi there, <br> I’m Eliza Irwin</h1>
 							<p>Full-stack web developer</p>
 						</header>
-						<p>A results-driven e-commerce buyer turned full-stack developer with strong
-							problem-solving abilities. Well versed in completing high-intensity, high-volume
-							work. Passionate about design and tech. Interested in a challenging career track
-							in the web development space.</p>
+						<p>A results-driven e-commerce buyer turned certified full-stack developer with strong problem-solving abilities and a commitment to learning new skills. Well versed in completing high-intensity, high-volume group and individual work. Passionate about combining design and tech to create user-friendly platforms. Recognized amongst peers for outstanding frontend developer abilities.</p>
 
 						<ul class="contact">
 							<li class="icon solid fa-envelope"><a
