--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 						<article>
 							<a href="#" class="image"><img src="images/clicky.jpg.png" alt="" /></a>
 							<h3>Clicky Game</h3>
-							<p>This is a guessing game built with react.</p>
+							<p>This is a guessing game built with react that tests the user's memory.</p>
+							<p>There is a 'score' as well as a 'highscore' function built in. The user is alerted once the game is over.</p>
 							<p>This app uses all skills learned so far as a full-stack developer.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/elizairwin/Click-Game" class="button">See the
