--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
 							<p>There is a 'score' as well as a 'highscore' function built in. The user is alerted once the game is over.</p>
 							<p>This app uses all skills learned so far as a full-stack developer.</p>
 							<ul class="actions">
+								<li><a href="https://elizairwin.github.io/Click-Game/" class="button">See
+										the Project</a></li>
 								<li><a href="https://github.com/elizairwin/Click-Game" class="button">See the
-										Code</a></li>
+										Code</a></li>	
 							</ul>
 						</article>
 						<article>
