updated resume and cv

--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
 
 						<article>
 							<ul class="actions">
-								<li><a href="https://drive.google.com/open?id=1AYUNLsy54xjoV6MfMt0V3PN-KpifsT54"
+								<li><a href="https://drive.google.com/open?id=1g0kRxUHg5sQ_yon_FvVMicZx4p9qKCXM"
 										class="button">View Resume</a></li>
 							</ul>
 						</article>
 						<article>
 							<article>
 								<ul class="actions">
-									<li><a href="https://drive.google.com/open?id=14J9hGv9sILChTcdBqiWhfoSqfJFXU_c4"
+									<li><a href="https://drive.google.com/open?id=1sa-aBeml85ghSnrC2aZsximisb6vp8Aq"
 											class="button">View Cover Letter</a></li>
 								</ul>
-								<article>
+								<!-- <article>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/open?id=1PNN73XTLBGpzi7NFJpTc4mw3CxOrqM8n"
+										<li><a href="https://drive.google.com/open?id=1VBW2T5jAVw7X2LIHwvz_Q0K0WBv4dfR4"
 												class="button">View References</a></li>
 									</ul>
-								</article>
+								</article> -->
 					</div>
 					<span class="image object" id="eliza">
 						<img src="images/eliza.jpg" alt="Eliza" />
