--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 									<li><a href="https://drive.google.com/open?id=1sa-aBeml85ghSnrC2aZsximisb6vp8Aq"
 											class="button">View Cover Letter</a></li>
 								</ul>
-								<!-- <article>
+								<article>
 									<ul class="actions">
 										<li><a href="https://drive.google.com/open?id=1VBW2T5jAVw7X2LIHwvz_Q0K0WBv4dfR4"
 												class="button">View References</a></li>
 									</ul>
-								</article> -->
+								</article>
 					</div>
 					<span class="image object" id="eliza">
 						<img src="images/eliza.jpg" alt="Eliza" />
