--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 						<ul class="contact">
 							<li class="icon solid fa-envelope"><a
-									href="mailto:elizairwin@gmail.com">elizairwin.gmail.com</a></li>
+									href="mailto:elizairwin@gmail.com">elizairwin@gmail.com</a></li>
 							<li class="icon solid fa-phone">(614) 257-7877</li>
 						</ul>
 
