--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 								axios,
 								writing the code, performing testing, debugging, and then finally I deployed the app.</p>
 							<ul class="actions">
+									<li><a href="https://desolate-oasis-54176.herokuapp.com/" class="button">See the
+										Project</a></li>
 								<li><a href="https://github.com/elizairwin/WorkoutTracker" class="button">See the
 										Code</a></li>
 							</ul>
@@ -376,7 +378,7 @@
 							</span>
 							<div class="content">
 								<h3>React</h3>
-								<p>React is a JavaScript library for building user interfaces.</p>
+								<p>A JavaScript library for building user interfaces.</p>
 							</div>
 						</article>
 					</div>
