updated a project link

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
 							<p>The user clicks the clothing buttons to dress the character in an outfit.</p>
 							<p>The 'icebox' includes more outfit/accessory choices for the user to pick from.</p>
 							<ul class="actions">
-								<li><a href="https://elizairwin.github.io/unit-4-game/" class="button">See the
+								<li><a href="https://elizairwin.github.io/Dress-Up-Game/" class="button">See the
 										Project</a></li>
-								<li><a href="https://github.com/elizairwin/unit-4-game" class="button">See the Code</a>
+								<li><a href="https://github.com/elizairwin/Dress-Up-Game" class="button">See the Code</a>
 								</li>
 							</ul>
 						</article>
