a heroku link added

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<p>There is a 'score' as well as a 'high score' function built in. The user is alerted once the game is over.</p>
 							<p>This app uses all skills learned so far as a full-stack developer.</p>
 							<ul class="actions">
-								<li><a href="https://elizairwin.github.io/Click-Game/" class="button">See
+								<li><a href="https://gentle-plains-07044.herokuapp.com/" class="button">See
 										the Project</a></li>
 								<li><a href="https://github.com/elizairwin/Click-Game" class="button">See the
 										Code</a></li>	
