--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 					<div class="content">
 						<header>
 							<h1>Hi there, <br> I’m Eliza Irwin</h1>
-							<p>Full-stack web developer</p>
+							<p>Software Engineer Apprentice</p>
+							<p>IBM - Southbury, CT</p>
 						</header>
-						<p>A results-driven e-commerce buyer turned certified full-stack developer with strong problem-solving abilities and a commitment to learning new skills. Well versed in completing high-intensity, high-volume group and individual work. Passionate about combining design and tech to create user-friendly platforms. Recognized amongst peers for outstanding frontend developer abilities.</p>
+						<p>A results-driven Software Engineer Apprentice with strong problem-solving abilities and a commitment to learning new skills. Well versed in completing high-intensity, high-volume group and individual work. Passionate about combining design and tech to create user-friendly platforms.</p>
 
 						<ul class="contact">
 							<li class="icon solid fa-envelope"><a
@@ -379,6 +380,15 @@
 							<div class="content">
 								<h3>React</h3>
 								<p>A JavaScript library for building user interfaces.</p>
+							</div>
+						</article>
+						<article>
+							<span class="icon">
+								<i class="fab fa-cube"></i>
+							</span>
+							<div class="content">
+								<h3>C</h3>
+								<p>A procedural programming language.</p>
 							</div>
 						</article>
 					</div>
